# usdc-weth-model

./: .gitignore  README.md  TODO.md  app.py  pyproject.toml  sweep.py
src/uniswap_demo/: __init__.py  agent.py  model.py  run.py  snap-info.ipynb  snapshot.py  snapshot_100.json  snapshot_dataframe_100.json  trading.ipynb  uniswap_math.py
src/uniswap_demo/abis/: __init__.py
src/uniswap_demo/data/: snapshot_10.json  snapshot_300.json  snapshot_dataframe_10.json  snapshot_dataframe_300.json
src/usdc_weth_model/: agent.py  damath.py  example.ipynb  fork.py  model.py  server.py  usdc-weth-snapshot.json
src/usdc_weth_model/abis/: __init__.py
tests/: __init__.py
